--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "value-object",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "value-object.js - simple value objects",
   "main": "dist/valueObject.js",
   "scripts": {
-    "test": "npm run eslint && npm run coverage",
+    "test": "npm run eslint && npm run coverage && ./package-test.sh",
     "eslint": "eslint src test",
     "build": "rm -rf dist && babel src --out-dir dist",
     "prepublish": "npm run build",
