--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "value-object",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "value-object.js - simple value objects",
-  "main": "dist/valueObject.js",
+  "main": "value-object.js",
   "scripts": {
-    "test": "npm run eslint && npm run coverage && ./package-test.sh",
+    "test": "npm run eslint && npm run coverage",
     "eslint": "eslint src test",
-    "build": "rm -rf dist && babel src --out-dir dist",
-    "prepublish": "npm run build",
-    "postinstall": "node scripts/postinstall.js",
     "mocha": "mocha",
     "coverage": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- test"
   },
@@ -28,8 +25,6 @@
   },
   "homepage": "https://github.com/cucumber-ltd/value-object.js#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-eslint": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
