--- a/package.json
+++ b/package.json
@@ -25,10 +25,21 @@
   },
   "homepage": "https://github.com/cucumber-ltd/value-object.js#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "browserify": "^16.1.0",
     "eslint": "^3.19.0",
     "eslint-config-eslint": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "mocha": "^3.4.2"
+    "karma": "^2.0.0",
+    "karma-babel-preprocessor": "^8.0.0-beta.0",
+    "karma-browserify": "^5.2.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "mocha": "^3.4.2",
+    "watchify": "^3.10.0"
   },
   "files": [
     "*"
