--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "benchmark": "^2.1.4",
     "browserify": "^16.1.0",
     "es6-error": "^4.1.1",
     "eslint": "^3.19.0",
@@ -39,6 +40,7 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "microtime": "^2.1.7",
     "mocha": "^3.4.2",
     "watchify": "^3.10.0"
   },
