--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-babel-preprocessor": "^8.0.0-beta.0",
     "karma-browserify": "^5.2.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
