--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "benchmark": "^2.1.4",
     "browserify": "^16.1.0",
     "es6-error": "^4.1.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-eslint": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
     "karma": "^2.0.0",
@@ -44,6 +44,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "microtime": "^2.1.7",
     "mocha": "^3.4.2",
+    "prettier": "^1.12.1",
     "watchify": "^3.10.0"
   },
   "files": [
