--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "eslint": "eslint src test",
     "mocha": "mocha",
     "karma": "karma start --browsers Firefox,Chrome --single-run",
-    "coverage":
-      "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- test"
+    "coverage": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- test"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/cucumber-ltd/value-object.js.git"
   },
-  "keywords": ["value", "object", "struct"],
+  "keywords": [
+    "value",
+    "object",
+    "struct"
+  ],
   "author": "Cucumber Limited <cukes@googlegroups.com>",
   "license": "MIT",
   "bugs": {
@@ -44,5 +47,10 @@
     "prettier": "^1.12.1",
     "watchify": "^3.10.0"
   },
-  "files": ["*"]
+  "files": [
+    "*"
+  ],
+  "dependencies": {
+    "clone": "^2.1.1"
+  }
 }
