--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "benchmark": "^2.1.4",
     "browserify": "^16.1.0",
+    "clone": "^2.1.1",
     "es6-error": "^4.1.1",
     "eslint": "^4.19.1",
     "eslint-config-eslint": "^4.0.0",
@@ -49,8 +50,5 @@
   },
   "files": [
     "*"
-  ],
-  "dependencies": {
-    "clone": "^2.1.1"
-  }
+  ]
 }
