--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "eslint": "eslint src test",
     "mocha": "mocha",
     "karma": "karma start --browsers Firefox,Chrome --single-run",
-    "coverage":
-      "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- test"
+    "coverage": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- test"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/cucumber-ltd/value-object.js.git"
   },
-  "keywords": ["value", "object", "struct"],
+  "keywords": [
+    "value",
+    "object",
+    "struct"
+  ],
   "author": "Cucumber Limited <cukes@googlegroups.com>",
   "license": "MIT",
   "bugs": {
@@ -29,10 +32,10 @@
     "browserify": "^16.1.0",
     "clone": "^2.1.1",
     "es6-error": "^4.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-eslint": "^4.0.0",
+    "eslint": "^5.9.0",
+    "eslint-config-eslint": "^5.0.1",
     "istanbul": "1.0.0-alpha.2",
-    "karma": "^2.0.0",
+    "karma": "^3.1.1",
     "karma-babel-preprocessor": "^8.0.0-beta.0",
     "karma-browserify": "^5.2.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -41,9 +44,11 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "microtime": "^2.1.7",
-    "mocha": "^3.4.2",
+    "mocha": "^5.2.0",
     "prettier": "^1.12.1",
     "watchify": "^3.10.0"
   },
-  "files": ["*"]
+  "files": [
+    "*"
+  ]
 }
